fixed bug on composer on mobile version

--- a/css/gobbit.css
+++ b/css/gobbit.css
@@ -146,3 +146,7 @@ a.community:hover{
 	padding: 10px;
 }
 
+.composer-textarea{
+	margin-bottom: 120px;
+}
+
